[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scripts/ui/title_screen.gd" id="1_title"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 80
font_color = Color(0.2, 0.65, 1, 1)
outline_size = 8
outline_color = Color(0.1, 0.3, 0.9, 1)
shadow_size = 6
shadow_color = Color(0.6, 0.1, 0.9, 0.7)
shadow_offset = Vector2(4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_subtitle"]
font_size = 22
font_color = Color(0.85, 0.9, 1, 1)
outline_size = 2
outline_color = Color(0.2, 0.4, 0.6, 0.8)

[sub_resource type="Animation" id="Animation_fade_in"]
resource_name = "fade_in"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_title_bob"]
resource_name = "title_bob"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitleContainer/TitleLabel:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2), Vector2(0, 0), Vector2(0, 2), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_button_pulse"]
resource_name = "button_pulse"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitleContainer/PlayButton:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TitleContainer/PlayButton:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.2, 1.2, 1.3, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_main"]
_data = {
"button_pulse": SubResource("Animation_button_pulse"),
"fade_in": SubResource("Animation_fade_in"),
"title_bob": SubResource("Animation_title_bob")
}

[node name="TitleScreen" type="CanvasLayer"]
layer = 90
process_mode = 3
script = ExtResource("1_title")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.01, 0.03, 0.08, 0.82)

[node name="TitleContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -180.0
offset_right = 350.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1

[node name="TitleLabel" type="Label" parent="TitleContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_title")
text = "Fishing-Rhythm"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="TitleContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_subtitle")
text = "Demo Build"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="TitleContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="PlayButton" type="Button" parent="TitleContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 65)
layout_mode = 2
size_flags_horizontal = 4
pivot_offset = Vector2(110, 32.5)
theme_override_colors/font_color = Color(0.2, 0.65, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.2, 0.65, 1, 1)
theme_override_colors/font_focus_color = Color(0.2, 0.65, 1, 1)
theme_override_font_sizes/font_size = 28
text = "â–¶  Play"

[node name="HintLabel" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45, 0.6, 0.75, 0.9)
theme_override_font_sizes/font_size = 14
text = "Press Enter or click Play to Start"
horizontal_alignment = 1

[node name="FadeOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_main")
}
autoplay = "fade_in"

[node name="TitleAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_main")
}
autoplay = "title_bob"

[node name="ButtonAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_main")
}
autoplay = "button_pulse"

[connection signal="pressed" from="TitleContainer/PlayButton" to="." method="_on_play_pressed"]
